<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/enable_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_bt" />

        <Button
            android:id="@+id/disable_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_bt"/>

        <Button
            android:id="@+id/scan_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_bt"
            android:visibility="invisible"/>

        <ListView
            android:id="@+id/devices_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>